scheduler/config/envoy-tls.yaml
static_resources:
  clusters:
    - connect_timeout: 1s
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: seldon-scheduler
                      port_value: 9002
      http2_protocol_options:
        connection_keepalive:
          interval: 60s
          timeout: 2s
      name: xds_cluster
      transport_socket:
        name: "envoy.transport_sockets.tls"
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext"
          common_tls_context:
            tls_certificate_sds_secret_configs:
              name: tls_sds
              sds_config:
                path: /etc/tls_certificate_sds_secret.yaml
            validation_context_sds_secret_config:
              name: validation_context_sds
              sds_config:
                path: /etc/validation_context_sds_secret.yaml
    - connect_timeout: 0.250s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: admin_interface_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 9901
      name: admin_interface_cluster
  listeners:
    - name: util_endpoint_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9003
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: util_endpoint_http
                http_filters:
                  - name: envoy.filters.http.health_check
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      pass_through_mode: false
                      headers:
                        - exact_match: /ready
                          name: :path
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_admin_interface_route
                  virtual_hosts:
                    - name: admin_interface
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /stats
                          route:
                            cluster: admin_interface_cluster
dynamic_resources:
  ads_config:
    api_type: DELTA_GRPC
    transport_api_version: V3
    grpc_services:
      - envoy_grpc:
          cluster_name: xds_cluster
    set_node_on_first_message_only: true
  cds_config:
    resource_api_version: V3
    ads: {}
  lds_config:
    resource_api_version: V3
    ads: {}
node:
  cluster: test-cluster
  id: test-id
layered_runtime:
  layers:
    - name: runtime-0
      rtds_layer:
        rtds_config:
          resource_api_version: V3
          ads: {}
        name: runtime-0
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
